Grouping tests into a class, using the setup fixture

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
+    login_guest: test login from main_page
     check-basket: marker for checking the shopping basket
     need_review: marker for code-review
